[project]
name = "test-reflex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.1.1",
    "python-dotenv>=1.0.1",
    "reflex==0.6.6.post2",
    "swarm",
]

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }
